chart-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: new-flask
spec:
  type: LoadBalancer
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
